# displite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.py  requirements.txt
cmake/: helpers.cmake
displite/includes/: hid.h  interface.h  lvgl_config.h  tusb_config.h  ui.h  usbstate.h
displite/includes/displays/: display.h  ili9486.h  st7735.h
displite/src/: displite.cpp  dsp_factory.cpp  interface.cpp  ui.cpp  usb_descriptors.c
displite/src/displays/: display.cpp  ili9486.cpp  st7735.cpp
displite/src/images/: displite_400_img.c
gui/: .gitignore
gui/demo/: demo.cmake  demo.cpp  demo.h
portar/: portar.cmake
portar/includes/: gui.h  lv_conf.h
portar/src/: portar.cpp
scripts/: __init__.py  console.py  create_gui.py  elf_flash.py  flash_elf.py  gui_util.py  init.py
scripts/gui_template/: cookiecutter.json
scripts/gui_template/{{cookiecutter.__project_slug}}/: __init__.py  {{ cookiecutter.__project_slug }}.cmake  {{ cookiecutter.__project_slug }}.cpp  {{ cookiecutter.__project_slug }}.h
